--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -4,10 +4,10 @@ logging:
   enabled_loggers:
     LiteLLM: warning
 variables:
-  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
-  LLM_ARCHITECT_MODEL: openai/gpt-5.1
+  LLM_DISCOVERY_MODEL: gpt-5-mini
+  LLM_ARCHITECT_MODEL: gpt-5.1
   LLM_ARCHITECT_REASONING: medium
-  LLM_CODER_MODEL: openai/gpt-5-mini
+  LLM_CODER_MODEL: gpt-5-mini
 # OpenAI
 #  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
 #  LLM_ARCHITECT_MODEL: openai/gpt-5
@@ -73,6 +73,13 @@ workflows:
         outcomes:
           - name: success
           - name: fail
+      - name: reprompt
+        type: input
+        message: What else are we coding?
+        confirmation: auto
+        hide_final_output: true
+        outcomes:
+          - name: done
     edges:
       - prompt.done -> discovery
       - discovery.done -> architect
@@ -80,8 +87,9 @@ workflows:
       - coder.done -> apply
       - apply.success -> test
       - apply.fail -> coder:keep_state
-      - test.success -> prompt
+      - test.success -> reprompt
       - test.fail -> architect:keep_state
+      - reprompt.done -> architect
   # Agent
   agent:
     description: "End-to-end development loop: discover requirements, design a plan, write code, apply patches, and run tests with retries."
