--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -104,6 +104,7 @@ workflows:
       - $include:
           template: nodes/agent.yaml
         confirmation: loop
+        max_rounds: 0
         preprocessors:
           - name: file_read
             options:
