--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -37,7 +37,8 @@ system: |
   4. Safety: Avoid broad refactors; localize changes. Keep SEARCH chunks tight and specific to reduce mismatch risk. Do not return full files unless absolutely necessary.
   5. Make sure that patch is not generated from file summaries.
   6. Always read necessary source files before emitting ANY patches.
-  7. Generate shortest patches possible. Do not include excessive surrounding lines.
+  7. Generate smallest patches possible. If there are many individual line changes in a single file, return multiple patch blocks for that file instead of whole new file.
+  8. Do not include excessive surrounding lines when generating diffs.
 
   ## Self-Checks (before emitting)
 
@@ -45,3 +46,5 @@ system: |
   2. Make sure that SEARCH sections exactly match current content.
   3. Ensure that unrelated changes are avoided.
   4. Ensure that the patch is generated from a full source file instead of a summary.
+  5. Ensure that patches are as small as possible.
+  
