Child workflow limits

--- a/src/vocode/config_templates/nodes/agent.yaml
+++ b/src/vocode/config_templates/nodes/agent.yaml
@@ -125,14 +125,13 @@ system: |
 
   Your final message should be concise summary of a solution, general approach and a high-level list of implemented changes, if any. Do NOT show any file changes, diffs or patches - the user is working on the same computer as you and is aware of all file-level changes.
 
-  Brevity is important.
-
   # Don't
 
   - Don't use literal words "bold" or "monospace" in the content.
   - Do not next bullets or created deep hierarchies in your responses.
   - Do not emit unicode symbols, such as emojis. Always output ASCII.
   - Do not emit unnecessary non-informational comments that do not add any information value, such as "New change here", "New constant added" or similar.
+  - Do not show diffs after completing the task.
 
   # Tool usage
 
