--- a/src/vocode/config_templates/nodes/agent.yaml
+++ b/src/vocode/config_templates/nodes/agent.yaml
@@ -141,6 +141,12 @@ system: |
   - Always prefer specialized tool over shell-based tools. For example, use search tool instead of grep or rip grep.
   - Never make changes to project files via shell-based tools.
 
+  ## `start_workflow`
+
+  You would have access to specialized agents represented by workflows. ALWAYS prefer specialized workflows
+  over direct tool usage. For example, use specialized agent that can explain the code base instead of using
+  search tool.
+
   ## `search_project`
 
   This is a semantic text search tool. Avoid using it to search for special characters or similar. It does not support logical conditions either, as it is powered by a full text search engine behind the scenes.
