--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -124,6 +124,7 @@ workflows:
         max_rounds: 0
         preprocessors:
           - name: child_workflows
+          - name: skills
           - name: file_read
             options:
               paths:
@@ -234,6 +235,8 @@ workflows:
           - exec
         reset_policy: keep_state
         preprocessors:
+          - name: child_workflows
+          - name: skills
           - name: file_read
             options:
               paths:
