--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -6,7 +6,8 @@ logging:
 variables:
   LLM_DISCOVERY_MODEL: gpt-5-mini
   LLM_ARCHITECT_MODEL: gpt-5.1
-  LLM_ARCHITECT_REASONING: medium
+  LLM_ARCHITECT_REASONING: high
+#  LLM_ARCHITECT_REASONING: medium
   LLM_CODER_MODEL: gpt-5-mini
 # OpenAI
 #  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
